# trend-sieve

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: daily-trend.yml  pre-commit.yaml
docs/: supabase-schema.sql
docs/plans/: 2026-01-17-cloud-monitoring.md
src/trend_sieve/: __init__.py  config.py  main.py  models.py  scheduler.py
src/trend_sieve/enrichers/: __init__.py  readme.py
src/trend_sieve/filters/: __init__.py  gemini.py
src/trend_sieve/notifiers/: __init__.py  slack.py
src/trend_sieve/sources/: __init__.py  base.py  github.py  hackernews.py
src/trend_sieve/storage/: __init__.py  supabase.py
tests/notifiers/: test_slack.py
tests/sources/: test_hackernews.py
tests/storage/: test_supabase.py
